--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -23,8 +23,8 @@ jobs:
       with:
         fetch-depth: 0
 
-    - name: Set up QEMU (for buildx)
-      uses: tonistiigi/binfmt@v1
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
