--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,108 +1,50 @@
-name: Pumpkin CI — build (amd64/arm64) + multi-arch image
+name: Build Pumpkin ARM64
 
 on:
+  workflow_dispatch:
   push:
     branches: [ "main" ]
-    tags: [ "v*" ]
-  pull_request:
-
-env:
-  IMAGE: ghcr.io/${{ github.repository_owner }}/pumpkin
-  RUST_TOOLCHAIN: stable
 
 jobs:
-  build-and-publish:
+  build-arm64:
     runs-on: ubuntu-24.04
-    permissions:
-      contents: read
-      packages: write
 
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v3
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-      with:
-        install: true
-
-    - name: Cache cargo registry + index
-      uses: actions/cache@v4
-      with:
-        path: |
-          ~/.cargo/registry
-          ~/.cargo/git
-        key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-cargo-registry-
-
-    - name: Install Rust toolchain (for host builds and cache)
-      uses: actions-rs/toolchain@v1
-      with:
-        profile: minimal
-        toolchain: ${{ env.RUST_TOOLCHAIN }}
-        components: rustfmt, clippy
-        targets: x86_64-unknown-linux-gnu,aarch64-unknown-linux-gnu
-
-    - name: Install cross C compiler (for cross builds)
-      run: sudo apt-get update && sudo apt-get install -y gcc-aarch64-linux-gnu pkg-config libssl-dev
-
-    # Build host amd64 binary (quick artifact)
-    - name: Build amd64 native binary (artifact)
+    # 1. Clone Pumpkin explicitly
+    - name: Clone Pumpkin repo
       run: |
-        cargo build -p pumpkin --release --target x86_64-unknown-linux-gnu
-      env:
-        CARGO_HOME: ${{ runner.temp }}/cargo
+        git clone https://github.com/Pumpkin-MC/Pumpkin.git
+        cd Pumpkin
+        git submodule update --init --recursive
 
-    - name: Upload amd64 artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: pumpkin-linux-amd64
-        path: target/x86_64-unknown-linux-gnu/release/pumpkin
-
-    # Cross-compile aarch64 native binary (artifact)
-    - name: Build aarch64 binary (cross)
+    # 2. Install system deps for cross-compile
+    - name: Install cross toolchain
       run: |
+        sudo apt-get update
+        sudo apt-get install -y \
+          gcc-aarch64-linux-gnu \
+          pkg-config \
+          libssl-dev
+
+    # 3. Install Rust + target
+    - name: Install Rust
+      run: |
+        curl https://sh.rustup.rs -sSf | sh -s -- -y
+        source $HOME/.cargo/env
+        rustup target add aarch64-unknown-linux-gnu
+
+    # 4. Cross-compile Pumpkin (ARM64 ONLY)
+    - name: Build Pumpkin (aarch64)
+      run: |
+        source $HOME/.cargo/env
+        cd Pumpkin
         export CC_aarch64_unknown_linux_gnu=aarch64-linux-gnu-gcc
+        export PKG_CONFIG_ALLOW_CROSS=1
         cargo build -p pumpkin --release --target aarch64-unknown-linux-gnu
-      env:
-        CARGO_HOME: ${{ runner.temp }}/cargo
 
-    - name: Upload aarch64 artifact
+    # 5. Upload ARM64 binary
+    - name: Upload ARM64 binary
       uses: actions/upload-artifact@v4
       with:
         name: pumpkin-linux-arm64
-        path: target/aarch64-unknown-linux-gnu/release/pumpkin
-
-    # Build & Push multi-arch image (Buildx handles per-platform build)
-    - name: Login to GHCR
-      uses: docker/login-action@v3
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Buildx
-      uses: docker/build-push-action@v5
-      with:
-        context: .
-        file: ./Dockerfile
-        platforms: linux/amd64,linux/arm64
-        push: true
-        tags: |
-          ${{ env.IMAGE }}:latest
-          ${{ env.IMAGE }}:${{ github.ref_name }}
-
-    # Optionally: create release (on tag)
-    - name: Create release and attach artifacts (tags only)
-      if: startsWith(github.ref, 'refs/tags/')
-      uses: softprops/action-gh-release@v2
-      with:
-        files: |
-          target/x86_64-unknown-linux-gnu/release/pumpkin
-          target/aarch64-unknown-linux-gnu/release/pumpkin
+        path: Pumpkin/target/aarch64-unknown-linux-gnu/release/pumpkin
