--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,65 +1,35 @@
-name: Build Pumpkin ARM64
+name: Pumpkin ARM64 Docker
 
 on:
   workflow_dispatch:
-  push:
-    branches: [ "main" ]
 
 jobs:
-  build-arm64:
+  build-arm64-docker:
     runs-on: ubuntu-24.04
+    permissions:
+      packages: write
 
     steps:
-    # ------------------------------------------------------------
-    # 1. Clone Pumpkin explicitly (no checkout magic)
-    # ------------------------------------------------------------
-    - name: Clone Pumpkin repository
-      run: |
-        git clone https://github.com/Pumpkin-MC/Pumpkin.git
-        cd Pumpkin
-        git submodule update --init --recursive
+    - name: Checkout (only for Dockerfile)
+      uses: actions/checkout@v4
 
-    # ------------------------------------------------------------
-    # 2. Install system deps for ARM64 cross-linking
-    # ------------------------------------------------------------
-    - name: Install cross toolchain
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y \
-          gcc-aarch64-linux-gnu \
-          pkg-config \
-          libssl-dev
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
 
-    # ------------------------------------------------------------
-    # 3. Install Rust (minimal, deterministic)
-    # ------------------------------------------------------------
-    - name: Install Rust toolchain
-      run: |
-        curl https://sh.rustup.rs -sSf | sh -s -- -y --profile minimal
-        source $HOME/.cargo/env
-        rustup target add aarch64-unknown-linux-gnu
+    - name: Set up Buildx
+      uses: docker/setup-buildx-action@v3
 
-    # ------------------------------------------------------------
-    # 4. Build Pumpkin (ARM64 ONLY, isolated target dir)
-    # ------------------------------------------------------------
-    - name: Build Pumpkin ARM64
-      run: |
-        source $HOME/.cargo/env
-        cd Pumpkin
-
-        export CC_aarch64_unknown_linux_gnu=aarch64-linux-gnu-gcc
-        export PKG_CONFIG_ALLOW_CROSS=1
-
-        # isolate target dir so NO host objects can ever mix
-        export CARGO_TARGET_DIR=$PWD/target-arm64
-
-        cargo build -p pumpkin --release --target aarch64-unknown-linux-gnu
-
-    # ------------------------------------------------------------
-    # 5. Upload ARM64 binary
-    # ------------------------------------------------------------
-    - name: Upload ARM64 binary
-      uses: actions/upload-artifact@v4
+    - name: Login to GHCR
+      uses: docker/login-action@v3
       with:
-        name: pumpkin-linux-arm64
-        path: Pumpkin/target-arm64/aarch64-unknown-linux-gnu/release/pumpkin
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Build ARM64 image
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        platforms: linux/arm64
+        push: true
+        tags: ghcr.io/${{ github.repository_owner }}/pumpkin:arm64
