Add push trigger for main branch in workflow

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,8 +1,8 @@
 name: Pumpkin ARM64 Docker
-
 on:
   workflow_dispatch:
-
+  push:
+    branches: [ "main" ]
 jobs:
   build-arm64-docker:
     runs-on: ubuntu-24.04
