--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,24 +1,28 @@
 name: Pumpkin ARM64 Docker
+
 on:
   workflow_dispatch:
   push:
     branches: [ "main" ]
 jobs:
-  build-arm64-docker:
+  build:
     runs-on: ubuntu-24.04
     permissions:
       packages: write
 
     steps:
-    - name: Checkout (only for Dockerfile)
-      uses: actions/checkout@v4
+    # checkout ONLY to get Dockerfile
+    - uses: actions/checkout@v4
 
+    # QEMU for ARM64
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v3
 
+    # Buildx
     - name: Set up Buildx
       uses: docker/setup-buildx-action@v3
 
+    # login to GHCR
     - name: Login to GHCR
       uses: docker/login-action@v3
       with:
@@ -26,10 +30,15 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Build ARM64 image
+    # lowercase owner (Docker requirement)
+    - name: Lowercase repo owner
+      run: echo "OWNER=${GITHUB_REPOSITORY_OWNER,,}" >> $GITHUB_ENV
+
+    # build + push ARM64 image
+    - name: Build & push ARM64 image
       uses: docker/build-push-action@v5
       with:
         context: .
         platforms: linux/arm64
         push: true
-        tags: ghcr.io/${{ github.repository_owner }}/pumpkin:arm64
+        tags: ghcr.io/${{ env.OWNER }}/pumpkin:arm64
